[tool.poetry]
name = "newertype"
version = "0.1.0"
description = "An Implementation of the NewType Pattern for Python that works in dynamic contexts."
authors = ["Evan Williams <ejw@fig.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/evanjpw/newertype"
#classifiers = []
#keywords = []
#documentation = ""

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
